--- a/app/src/main/res/layout/activity_repo_list.xml
+++ b/app/src/main/res/layout/activity_repo_list.xml
@@ -5,5 +5,9 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".activities.RepoListActivity">
+<android.support.v7.widget.RecyclerView
+    android:layout_width="match_parent"
+    android:layout_height="match_parent">
 
+</android.support.v7.widget.RecyclerView>
 </LinearLayout>
